# template_abi_test

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  core.cpp  core.hpp  core_impl.ipp  export_types.hpp  exports.ipp  exports_lib.cpp  plugin.cpp
